fixed adaptive menu && text-align && subscribe padding && bottom icon-link added

--- a/src/styles/_default.scss
+++ b/src/styles/_default.scss
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-weight: 400;
   color: #3e3e3e;
